--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,122 @@
     transform: rotate(360deg);
   }
 }
+
+.circle0 {
+  transform: translateX(-60px);
+  transition: all 1s ease;
+  position: relative;
+  bottom: -30px
+} 
+
+.circle1 {
+  transform: translateX(-120px);
+  transition: all 1s ease;
+
+  position: relative;
+  bottom: -30px
+}
+
+.circle2 {
+  transform: translateX(-180px);
+  transition: all 1s ease;
+
+  position: relative;
+  bottom: -30px
+}
+
+.circle3 {
+  transform: translateX(-240px);
+  transition: all 1s ease;
+
+  position: relative;
+  bottom: -30px
+}
+
+/* .bottom-line {
+  transform: translateX(-240px);
+  transition: all 1s ease;
+} */
+
+.icon-hover {
+  cursor: pointer;
+}
+
+
+@keyframes fadeInAnimation { 
+    0% { 
+        opacity: 0; 
+    } 
+    100% { 
+        opacity: 1; 
+     } 
+} 
+
+@keyframes bounceAnimation { 
+    0% { 
+        height: 100px; 
+    } 
+    40% { 
+        height: 70px; 
+     } 
+      60% { 
+        height: 100px; 
+     } 
+     75% { 
+        height: 90px; 
+     } 
+     100% { 
+        height: 100px; 
+     } 
+} 
+
+.tooltip{
+    font-size: 14px;
+    animation: fadeInAnimation ease 1.5s;
+    animation-iteration-count: 1; 
+    animation-fill-mode: forwards; 
+}
+
+.dock-second-position {
+  animation: fadeInAnimation ease .5s;
+  height: 10px;
+  transition: all 1s ease;
+}
+
+.selected{
+    animation: bounceAnimation ease 1.5s;
+    animation-iteration-count: 1; 
+    animation-fill-mode: forwards; 
+}
+
+svg *{
+  pointer-events: none; 
+}
+
+
+.notetag:hover {
+    cursor: pointer;
+    background-color: "#00B79D";
+}
+
+@keyframes snackAnimation { 
+    0% { 
+      transform: translateY(100px);
+    } 
+    40% { 
+      transform: translateY(-40px);
+     } 
+      60% { 
+        transform: translateY(-40px);
+     } 
+} 
+
+.snackling{
+     animation: snackAnimation ease 1.5s;
+    animation-iteration-count: 1; 
+    animation-fill-mode: forwards; 
+}
+
+.ex {
+  cursor: pointer;
+}
