--- a/src/App.css
+++ b/src/App.css
@@ -169,3 +169,38 @@ svg *{
   animation: fadeInAnimation ease 1s;
 }
 
+@keyframes shrinkAnimation { 
+    0% { 
+        height: 120px; 
+        transform: translateY(0);
+    } 
+     100% { 
+        height: 10; 
+        transform: translateY(500);
+     } 
+} 
+
+
+.navling-hidden{
+  animation: shrinkAnimation ease 1s;
+  height: 0; 
+}
+
+.quill-editor{
+  width: 850px;
+  height: 120px;
+}
+
+@keyframes rotateAnimation { 
+     100% { transform:rotate(360deg); 
+     } 
+} 
+
+
+.up{
+    transform: rotate(20deg)
+}
+
+.down{
+  animation: rotateAnimation ease 1s;
+}
